# gta5-extended-video-export

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  appveyor.yml  gta5-extended-video-export.sln  vcpkg.json
ScriptHookV/: HOWTO.TXT
deploy/presets/Adobe Premiere (By @FixingG00D)/: preset.ini
ffmpeg/: README.txt
ffmpeg/doc/: ffmpeg-all.html  ffmpeg-filters.html  ffmpeg-formats.html  ffplay-all.html  ffprobe-all.html
ffmpeg/lib/: avcodec.exp  avdevice.exp  avfilter.exp  avformat.exp  avutil-54.exp  avutil.exp  lib.7z  postproc-53.exp  postproc.exp  rebuild.bat  swresample-1.exp  swresample.exp  swscale-3.exp  swscale.exp
gta5-extended-video-export/: AVCodecContextParams.txt  CMakeLists.txt  MFUtility.h  PSAccumulate.h  PSDivide.h  PSDivide.hlsl  PSLinearizeDepth.h  PSLinearizeDepth.hlsl  ReadMe.txt  SafeQueue.h  VSFullScreen.h  VSFullScreen.hlsl  VSPassThrough.h  VSPassThrough.hlsl  config.cpp  config.h  custom-hooks.h  default.ini  dllmain.cpp  encoder.cpp  encoder.h  game-detour-def.h  gta5-lossless-render.vcxproj  gta5-lossless-render.vcxproj.filters  hook-def.h  hookdefs.h  hooks.cpp  hooks.h  logger.cpp  logger.h  packages.config  preset.ini  pvfindex.h  resource.aps  resource.rc  script.cpp  script.h  stdafx.h  util.cpp  util.h  (+3 more)
gta5-extended-video-export-config/: CMakeLists.txt  gta5-extended-video-export-config.cpp
gta5-extended-video-export-test/: CMakeLists.txt  ReadMe.txt  gta5-extended-video-export-test.cpp  gta5-extended-video-export-test.vcxproj  gta5-extended-video-export-test.vcxproj.filters  packages.config  test.mp4.sfk
gta5-extended-video-export/deploy/EVE/: ExtendedVideoExport.ini  preset.ini  preset.json  readme.txt
gta5-extended-video-export/deploy/EVE/presets/Adobe Premiere (By @FixingG00D)/: preset.ini
gta5-extended-video-export/deploy/EVE/presets/Apple ProRes (By @theBmag)/: preset.ini
gta5-extended-video-export/deploy/EVE/presets/GIF (By @nightingale)/: preset.ini
gta5-extended-video-export/deploy/EVE/presets/H.265 (By @nightingale)/: preset.ini
gta5-extended-video-export/deploy/EVE/presets/JPEG-Sequence (By @nightingale)/: preset.ini
gta5-extended-video-export/deploy/EVE/presets/MPEG-2 (By @nightingale)/: preset.ini
gta5-extended-video-export/deploy/EVE/presets/NVENC - H.264 (By @theBmag)/: preset.ini
gta5-extended-video-export/deploy/EVE/presets/NVENC - H.265 (By @theBmag)/: preset.ini
gta5-extended-video-export/deploy/EVE/presets/PNG-Sequence (By @nightingale)/: preset.ini
gta5-extended-video-export/deploy/EVE/presets/WAV-AudioOnly (By @nightingale)/: preset.ini
gta5-extended-video-export/shaders/: PSAccumulate.hlsl
stuff/: set_resolution.txt  set_video_fps.txt  sound-problem.txt
